# puck

./: BCLOUD  CMakeLists.txt  README.md  release.bcloud  setup.py  swig_run.sh
ann-benchmarks/: BCLOUD  README.md  algos.yaml
ann-benchmarks/benchmark/algorithms/: faiss_inmem.py  puck_inmem.py
ann-benchmarks/install/: Dockerfile.nmslib_inmem  Dockerfile.puck_inmem  Dockerfile.puck_inmem_cmake  Dockerfile.vamana_pq  Dockerfile.vamanapy
cmake/: FindMKL.cmake  gflags.cmake  yael.cmake
demo/: BCLOUD  CMakeLists.txt  insert_demo.cpp  puck_client.cpp  search_client.cpp  tinker_client.cpp
demo/conf/: puck.conf
docs/: README.md
puck/: CMakeLists.txt  index.h  index_conf.cpp  index_conf.h  logging.cpp  logging.h  puck_data_pool.h  search_context.cpp  search_context.h  simple_data_pool.h
puck/base/: md5.cpp  time.cpp  time.h
puck/base/yael/: matrix.c  matrix.h  vector.c
puck/gflags/: puck_gflags.cpp  puck_gflags.h
puck/hierarchical_cluster/: hierarchical_cluster_index.cpp  hierarchical_cluster_index.h  imitative_heap.cpp  imitative_heap.h  index_conf.cpp  index_conf.h  max_heap.cpp  max_heap.h
puck/puck/: distances_simd.cpp  puck_index.cpp  puck_index.h  quantization.cpp  quantization.h  realtime_insert_puck_index.cpp  realtime_insert_puck_index.h  utils_simd.cpp
puck/tinker/: index.h  object.h  params.h  pow.h  space.h  tinker_index.cpp  tinker_index.h
puck/tinker/method/: hnsw.h  hnsw_distfunc_opt.cc  hnsw_distfunc_opt_impl_inline.h  tinker_distfunc_opt.cc
pyapi_wrapper/: BCLOUD  CMakeLists.txt  py_api_wrapper.cpp  py_api_wrapper.h  py_gnoimi_api_wrapper.cpp  py_gnoimi_api_wrapper.h  py_puck_api.i  setup.py
src/: gnoimi_data_pool.h  index.h  puck_data_pool.h  search_context.cpp  search_context.h  searcher.cpp  searcher.h  simple_data_pool.h
src/base/: md5.cpp  md5.h  time.cpp  time.h
src/gflags/: puck_gflags.cpp  puck_gflags.h
src/hierarchical_cluster/: hierarchical_cluster.cpp  hierarchical_cluster.h  hierarchical_cluster_index.cpp  hierarchical_cluster_index.h  imitative_heap.cpp  imitative_heap.h  index_conf.cpp  index_conf.h  max_heap.cpp  max_heap.h
src/puck/: puck_index.cpp  puck_index.h  quantization.cpp  quantization.h  realtime_insert_puck_index.cpp  utils_simd.cpp  utils_simd.h
src/tinker/: object.h  params.h  portable_intrinsics.h  pow.h  space.h  thread_pool.h  tinker_index.cpp  tinker_index.h  utils.h
src/tinker/method/: hnsw.cc  hnsw.h  hnsw_distfunc_opt.cc
src/tinker/space/: space_lp.h
test/: BCLOUD  test_index.cpp  test_index.h  test_index_recall.cpp  test_params.cpp
tools/: BCLOUD  CMakeLists.txt  README.md  build.cpp  distribute_build_gnoimi.cpp  distribute_build_puck.cpp  distribute_merge_index.cpp  string_split.h  train.cpp
tools/MR_script/: README.md  buildindex_example.sh  config.propertie  hadoop_build_control.sh  mergeindex_example.sh  split_bs.py
tools/conf/: puck_log.conf  puck_train.conf
tools/demo/conf/: puck_train.conf
tools/script/: gnoimi_train_control.sh  initProcessData.py  puck_train_control.sh
